--- a/server-docs/src/main/asciidoc/api-guide.adoc
+++ b/server-docs/src/main/asciidoc/api-guide.adoc
@@ -113,8 +113,8 @@ include::{snippets}/website-example/links.adoc[]
 [[resources-user]]
 == User
 
-The User resource provides the entry point into the service.
-
+The User resource provides the entry point into the service
+of current logged in uer.
 
 
 [[resources-user-access]]
@@ -131,7 +131,6 @@ include::{snippets}/user-example/response-fields.adoc[]
 include::{snippets}/user-example/http-response.adoc[]
 
 
-
 [[resources-user-links]]
 ==== Links
 
@@ -142,7 +141,9 @@ include::{snippets}/user-example/links.adoc[]
 [[resources-user-profile]]
 == User Profile
 
-The Profile resource is used to retrieve and update current logged in user profile.
+The Profile resource is used to retrieve and update current 
+logged in user profile.
+
 
 [[resources-user-profile-retrieve]]
 === Reading user profile
@@ -151,22 +152,21 @@ A `GET` request will retrieve current user profile.
 
 ==== Response structure
 
-include::{snippets}/user-profile-example/response-fields.adoc[]
+include::{snippets}/user-profile-retrieve-example/response-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-profile-example/curl-request.adoc[]
+include::{snippets}/user-profile-retrieve-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-profile-example/http-response.adoc[]
-
+include::{snippets}/user-profile-retrieve-example/http-response.adoc[]
 
 
 [[resources-user-profile-update]]
 === Update user profile
 
-A `PUT` request is used to update user profile
+A `PUT` request is used to update user profile.
 
 ==== Request structure
 
@@ -180,32 +180,44 @@ include::{snippets}/user-profile-update-example/curl-request.adoc[]
 
 include::{snippets}/user-profile-update-example/http-response.adoc[]
 
-[[resources-user-receipt]]
-== User Receipt
 
 
-[[resources-user-receipts-list]]
+[[resources-user-receipts]]
+== User Receipts
+
+User Receipts resource is used to manage current logged in user
+receipts for listing, uploading new receipt images.
+
+[[resources-user-receipt-list]]
 === Listing user receipts
 
 A `GET` request will list all of the current user's receipts.
 
 ==== Response structure
 
-include::{snippets}/user-receipts-list-example/response-fields.adoc[]
+include::{snippets}/user-receipt-list-example/response-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-receipts-list-example/curl-request.adoc[]
+include::{snippets}/user-receipt-list-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-receipts-list-example/http-response.adoc[]
+include::{snippets}/user-receipt-list-example/http-response.adoc[]
 
-[[resources-user-receipts-list-links]]
+
+[[resources-user-receipt-list-links]]
 ==== Links
 
-include::{snippets}/user-receipts-list-example/links.adoc[]
+include::{snippets}/user-receipt-list-example/links.adoc[]
 
+
+
+[[resources-user-upload-receipt]]
+== User Upload Receipt
+
+This resource is for uploading image for a new receipt.
+TODO: find a better restful way to do it?
 
 [[resources-user-receipt-upload]]
 === Create a new receipt by uploading a receipt image
@@ -223,6 +235,11 @@ include::{snippets}/user-receipt-upload-example/curl-request.adoc[]
 ==== Example response
 
 include::{snippets}/user-receipt-upload-example/http-response.adoc[]
+
+
+[[resources-user-receipt]]
+== User Receipt
+Resource for a single user uploaded receipt.
 
 [[resources-user-receipt-retrieve]]
 === Get user receipt with id
@@ -247,12 +264,15 @@ include::{snippets}/user-receipt-retrieve-example/http-response.adoc[]
 include::{snippets}/user-receipt-retrieve-example/links.adoc[]
 
 
-[[resources-user-receipt-image]]
-== User Receipt Image
+
+[[resources-user-receipt-images]]
+== User Receipt Images
+
+User Receipt Images is used to manage list of images belonging to one receipt.
+
 
 [[resources-user-receipt-image-list]]
-== User Receipt Image List
-
+=== List User Receipt Images
 
 A `GET` request will list all of the images from a specific receipt.
 
@@ -286,6 +306,13 @@ include::{snippets}/user-receipt-image-upload-example/curl-request.adoc[]
 
 include::{snippets}/user-receipt-image-upload-example/http-response.adoc[]
 
+
+
+[[resources-user-receipt-image]]
+== User Receipt Image
+
+User Receipt Image resource is for one image of specific receipt.
+
 [[resources-user-receipt-image-retrieve]]
 === Get receipt image 
 
@@ -307,4 +334,120 @@ include::{snippets}/user-receipt-image-retrieve-example/http-response.adoc[]
 ==== Links
 
 include::{snippets}/user-receipt-image-retrieve-example/links.adoc[]
+
+
+[[resources-user-receipt-items]]
+== User Receipt Items
+
+User Receipt Items is used to retrieve list of items from one receipt parsing result.
+
+
+[[resources-user-receipt-item-list]]
+=== List User Receipt Parsed Items
+
+A `GET` request will list all of the items from a specific receipt.
+
+==== Response structure
+
+include::{snippets}/user-receipt-item-list-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/user-receipt-item-list-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/user-receipt-item-list-example/http-response.adoc[]
+
+
+[[resources-user-stores]]
+== User Stores
+
+User Stores to manage all store shopping list.
+
+[[resources-user-store-list]]
+=== List all stores in user shoppinglist
+
+A `GET` request will list all of the stores for current logged in user.
+
+==== Response structure
+
+include::{snippets}/user-store-list-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/user-store-list-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/user-store-list-example/http-response.adoc[]
+
+[[resources-user-store]]
+== User Store
+
+User Store resource for a specific store.
+
+[[resources-user-store-retrieve]]
+=== Retrieve Store with Id
+
+A `GET` request will get store data by Id
+
+==== Response structure
+
+include::{snippets}/user-store-retrieve-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/user-store-retrieve-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/user-store-retrieve-example/http-response.adoc[]
+
+
+[[resources-user-store-items]]
+== User Shopping List Items
+
+User Shopping List Items to manage user's shopping list items for specific store
+
+[[resources-user-store-item-list]]
+=== List all shopping items in user shoppinglist for a store
+
+A `GET` request will list all of the items for a shopping list of store.
+
+==== Response structure
+
+include::{snippets}/user-store-item-list-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/user-store-item-list-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/user-store-item-list-example/http-response.adoc[]
+
+
+
+[[resources-user-store-item]]
+== User Shopping List Item 
+
+User Shopping List Item Resource is for the item in one of user shopping list for a store.
+
+[[resources-user-store-item-retrieve]]
+=== Retrieve Shopping Item with Id
+
+A `GET` request will get shopping list item data by Id
+
+==== Response structure
+
+include::{snippets}/user-store-item-retrieve-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/user-store-item-retrieve-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/user-store-item-retrieve-example/http-response.adoc[]
 
