--- a/server-docs/src/main/asciidoc/admin-api-guide.adoc
+++ b/server-docs/src/main/asciidoc/admin-api-guide.adoc
@@ -37,3 +37,87 @@ include::{snippets}/admin-example/http-response.adoc[]
 ==== Links
 
 include::{snippets}/admin-example/links.adoc[]
+
+
+[[resources-admin-users]]
+== Admin Users Resource
+
+Admin Users resource is used to manage admin-managed Users
+for listing, adding end users.
+
+[[resources-admin-user-list]]
+=== Listing all end users
+
+A `GET` request will list all of the admin-managed users in the system.
+
+==== Response structure
+
+include::{snippets}/admin-user-list-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/admin-user-list-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/admin-user-list-example/http-response.adoc[]
+
+
+[[resources-admin-user-list-links]]
+==== Links
+
+include::{snippets}/admin-user-list-example/links.adoc[]
+
+
+[[resources-admin-user]]
+== Admin User Resource
+
+Admin User resource is used to manage one admin-managed user
+for edit, delete.
+
+[[resources-admin-user-retrieve]]
+=== Retrieve one end user
+
+A `GET` request will retrieve admin-managed user data.
+
+==== Response structure
+
+include::{snippets}/admin-user-retrieve-example/response-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/admin-user-retrieve-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/admin-user-retrieve-example/http-response.adoc[]
+
+
+[[resources-admin-user-retrieve-links]]
+==== Links
+
+include::{snippets}/admin-user-retrieve-example/links.adoc[]
+
+
+[[resources-admin-user-lockState]]
+== Admin User LockState Resource
+
+Resource for admin-managed user lock state.
+
+[[resources-admin-user-lockState-update]]
+=== Update admin user lock state
+
+A `PUT` request is used to update admin-managed user lock state, either lock the user
+or unlock the user.
+
+==== Request structure
+
+include::{snippets}/admin-user-lockState-update-example/request-fields.adoc[]
+
+==== Example request
+
+include::{snippets}/admin-user-lockState-update-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/admin-user-lockState-update-example/http-response.adoc[]
