--- a/server-docs/src/main/asciidoc/api-guide.adoc
+++ b/server-docs/src/main/asciidoc/api-guide.adoc
@@ -104,438 +104,107 @@ include::{snippets}/website-example/response-fields.adoc[]
 include::{snippets}/website-example/http-response.adoc[]
 
 
-
 [[resources-website-links]]
 ==== Links
 
 include::{snippets}/website-example/links.adoc[]
 
-[[resources-user]]
-== User
-
-The User resource provides the entry point into the service
-of current logged in uer.
 
 
-[[resources-user-access]]
-=== Accessing the `user` resource
+[[resources-registration]]
+== Registration
 
-A `GET` request is used to access the user
+Registration resource is for new user registration.
 
-==== Response structure
+[[resources-registration-register]]
+=== New user register
 
-include::{snippets}/user-example/response-fields.adoc[]
-
-==== Example response
-
-include::{snippets}/user-example/http-response.adoc[]
-
-
-[[resources-user-links]]
-==== Links
-
-include::{snippets}/user-example/links.adoc[]
-
-
-
-[[resources-user-profile]]
-== User Profile
-
-The Profile resource is used to retrieve and update current
-logged in user profile.
-
-
-[[resources-user-profile-retrieve]]
-=== Reading user profile
-
-A `GET` request will retrieve current user profile.
-
-==== Response structure
-
-include::{snippets}/user-profile-retrieve-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-profile-retrieve-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-profile-retrieve-example/http-response.adoc[]
-
-
-[[resources-user-profile-update]]
-=== Update user profile
-
-A `PUT` request is used to update user profile.
+A `POST` request is used to register a new user.
 
 ==== Request structure
 
-include::{snippets}/user-profile-update-example/request-fields.adoc[]
+include::{snippets}/registration-register-example/request-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-profile-update-example/curl-request.adoc[]
+include::{snippets}/registration-register-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-profile-update-example/http-response.adoc[]
+include::{snippets}/registration-register-example/http-response.adoc[]
 
 
 
-[[resources-user-receipts]]
-== User Receipts Resource
+[[resources-forget-password]]
+== Forget Password
 
-User Receipts resource is used to manage current logged in user
-receipts for listing, uploading new receipt images.
+Forget Password resource is for user to ask for a forget password request.
 
-[[resources-user-receipt-list]]
-=== Listing user receipts
+[[resources-forget-password-request]]
+=== Forget Password Request
 
-A `GET` request will list all of the current user's receipts.
-
-==== Response structure
-
-include::{snippets}/user-receipt-list-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-receipt-list-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-list-example/http-response.adoc[]
-
-
-[[resources-user-receipt-list-links]]
-==== Links
-
-include::{snippets}/user-receipt-list-example/links.adoc[]
-
-
-
-[[resources-user-receipt-upload]]
-== User Receipt Upload Resource
-
-This resource is for uploading image for a new receipt.
-TODO: find a better restful way to do it?
-
-[[resources-user-receipt-upload-create]]
-=== Uploading a receipt image to create a new Receipt
-
-A `POST` request is used to upload a receipt image for new receipt
+A `POST` request is used to tell system that user has forgotten the login password.
+An email will be sent to user email account with a link to reset password page.
 
 ==== Request structure
 
-include::{snippets}/user-receipt-upload-example/request-parameters.adoc[]
+include::{snippets}/forget-password-request-example/request-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-receipt-upload-example/curl-request.adoc[]
+include::{snippets}/forget-password-request-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-receipt-upload-example/http-response.adoc[]
+include::{snippets}/forget-password-request-example/http-response.adoc[]
 
 
-[[resources-user-receipt]]
-== User Receipt Resource
 
-Resource for a single user uploaded receipt, may contain one or more images.
+[[resources-reset-password]]
+== Reset Password
 
-[[resources-user-receipt-retrieve]]
-=== Get user receipt
+Reset Password resource is for user to ask for a forget password request.
 
-A `GET` request is used to retrieve user receipt
+[[resources-reset-password-retrieve]]
+=== Reset Password Retrieve
+
+A `GET` request is used to retrieve previous reset password request through
+forget password process. Usually user will get a reset password email
+with a url link pointing to reset password page. The front-end will call
+this api to get Reset Password request.
 
 ==== Response structure
 
-include::{snippets}/user-receipt-retrieve-example/response-fields.adoc[]
+include::{snippets}/reset-password-retrieve-example/response-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-receipt-retrieve-example/curl-request.adoc[]
+include::{snippets}/reset-password-retrieve-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-receipt-retrieve-example/http-response.adoc[]
-
-[[resources-user-receipt-links]]
-==== Links
-
-include::{snippets}/user-receipt-retrieve-example/links.adoc[]
+include::{snippets}/reset-password-retrieve-example/http-response.adoc[]
 
 
-[[resources-user-receipt-delete]]
-=== Delete user receipt
+[[resources-reset-password-update]]
+=== Reset password update
 
-A `DELETE` request is used to delete user receipt, it will delete all images with this receipt.
-
-==== Example request
-
-include::{snippets}/user-receipt-delete-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-delete-example/http-response.adoc[]
-
-
-[[resources-user-receipt-feedback]]
-== User Receipt Feedback Resource
-
-Resource for user feedback to the receipt. Right now only has rating. TODO: add comment later.
-
-[[resources-user-receipt-feedback-update]]
-=== Update user feedback to the receipt
-
-A `PUT` request is used to update user rating for the receipt
+A `PUT` request is used to update user password.
 
 ==== Request structure
 
-include::{snippets}/user-receipt-feedback-update-example/request-fields.adoc[]
+include::{snippets}/reset-password-update-example/request-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-receipt-feedback-update-example/curl-request.adoc[]
+include::{snippets}/reset-password-update-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-receipt-feedback-update-example/http-response.adoc[]
+include::{snippets}/reset-password-update-example/http-response.adoc[]
 
 
 
-[[resources-user-receipt-images]]
-== User Receipt Images
+link:user-api-guide.html[User API Documentation]
 
-User Receipt Images is used to manage list of images belonging to one receipt.
-
-
-[[resources-user-receipt-image-list]]
-=== List User Receipt Images
-
-A `GET` request will list all of the images from a specific receipt.
-
-==== Response structure
-
-include::{snippets}/user-receipt-image-list-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-receipt-image-list-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-image-list-example/http-response.adoc[]
-
-[[resources-user-receipt-image-list-links]]
-==== Links
-
-include::{snippets}/user-receipt-image-list-example/links.adoc[]
-
-[[resources-user-receipt-image-upload]]
-=== Upload another image to receipt
-
-A `POST` request is used to upload a receipt image for existing receipt
-
-==== Request structure
-
-include::{snippets}/user-receipt-image-upload-example/request-parameters.adoc[]
-
-==== Example request
-
-include::{snippets}/user-receipt-image-upload-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-image-upload-example/http-response.adoc[]
-
-
-
-[[resources-user-receipt-image]]
-== User Receipt Image
-
-User Receipt Image resource is for one image of specific receipt.
-
-[[resources-user-receipt-image-retrieve]]
-=== Get receipt image
-
-A `GET` request is used to retrieve a receipt image data for existing receipt
-
-==== Response structure
-
-include::{snippets}/user-receipt-image-retrieve-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-receipt-image-retrieve-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-image-retrieve-example/http-response.adoc[]
-
-[[resources-user-receipt-image-links]]
-==== Links
-
-include::{snippets}/user-receipt-image-retrieve-example/links.adoc[]
-
-
-
-[[resources-user-receipt-items]]
-== User Receipt Items
-
-User Receipt Items is used to retrieve list of items from one receipt parsing result.
-
-
-[[resources-user-receipt-item-list]]
-=== List User Receipt Parsed Items
-
-A `GET` request will list all of the items from a specific receipt.
-
-==== Response structure
-
-TODO : fix receipt item resource
-
-/*include::{snippets}/user-receipt-item-list-example/response-fields.adoc[]*/
-
-==== Example request
-
-include::{snippets}/user-receipt-item-list-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-receipt-item-list-example/http-response.adoc[]
-
-
-[[resources-user-stores]]
-== User Stores
-
-User Stores to manage all store shopping list.
-
-[[resources-user-store-list]]
-=== List all stores in user shoppinglist
-
-A `GET` request will list all of the stores for current logged in user.
-
-==== Response structure
-
-include::{snippets}/user-store-list-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-store-list-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-store-list-example/http-response.adoc[]
-
-[[resources-user-store-list-links]]
-==== Links
-
-include::{snippets}/user-store-list-example/links.adoc[]
-
-[[resources-user-store]]
-== User Store
-
-User Store resource for a specific store.
-
-[[resources-user-store-retrieve]]
-=== Retrieve Store with Id
-
-A `GET` request will get store data by Id
-
-==== Response structure
-
-include::{snippets}/user-store-retrieve-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-store-retrieve-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-store-retrieve-example/http-response.adoc[]
-
-[[resources-user-store-retrieve-links]]
-==== Links
-
-include::{snippets}/user-store-retrieve-example/links.adoc[]
-
-
-[[resources-user-shoppinglist]]
-== User Shopping List
-
-User Shopping List resource is for user uploading shopping list.
-
-[[resources-user-shoppinglist-upload]]
-=== Upload User Shopping List
-
-A `POST` request is used to upload a user's shoppinglist for a store
-
-==== Request structure
-
-include::{snippets}/user-shoppinglist-upload-example/request-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-shoppinglist-upload-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-shoppinglist-upload-example/http-response.adoc[]
-
-
-
-[[resources-user-store-items]]
-== User Shopping List Items
-
-User Shopping List Items to manage user's shopping list items for specific store
-
-[[resources-user-store-item-list]]
-=== List all shopping items in user shoppinglist for a store
-
-A `GET` request will list all of the items for a shopping list of store.
-
-==== Response structure
-
-include::{snippets}/user-store-item-list-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-store-item-list-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-store-item-list-example/http-response.adoc[]
-
-[[resources-user-store-item-list-links]]
-==== Links
-
-include::{snippets}/user-store-item-list-example/links.adoc[]
-
-
-
-[[resources-user-store-item]]
-== User Shopping List Item
-
-User Shopping List Item Resource is for the item in one of user shopping list for a store.
-
-[[resources-user-store-item-retrieve]]
-=== Retrieve Shopping Item with Id
-
-A `GET` request will get shopping list item data by Id
-
-==== Response structure
-
-include::{snippets}/user-store-item-retrieve-example/response-fields.adoc[]
-
-==== Example request
-
-include::{snippets}/user-store-item-retrieve-example/curl-request.adoc[]
-
-==== Example response
-
-include::{snippets}/user-store-item-retrieve-example/http-response.adoc[]
-
-[[resources-user-store-item-retrieve-links]]
-==== Links
-
-include::{snippets}/user-store-item-retrieve-example/links.adoc[]
+link:admin-api-guide.html[Admin API Documentation]
